# wcps_game

./: .env  .gitignore  README.md  new_packet_ids  pyproject.toml
wcps_game/: cli.py  clients.py  config.py  database.py  main.py  networking.py
wcps_game/client/: item_shop.csv  items.csv  items.py  map_vehicles.csv  maps.csv  maps.py  vehicle_catalogue.py  vehicle_weapon_damage.csv  vehicles.csv  weapon_damage.csv
wcps_game/entities/: game_server.py  network_entities.py  user.py
wcps_game/game/: base_game_mode.py  channels.py  constants.py  game_constants.py  game_server.py  ground_item.py  inventory.py  player.py  rooms.py  user_stats.py  vehicle.py
wcps_game/handlers/: __init__.py  chat.py  client_authentication.py  coupon.py  equipment.py  explosives.py  game_handler_factory.py  game_proccess.py  handler_factory.py  handler_list.py  internal_auth_connection.py  internal_client_authentication.py  internal_server_authentication.py  internals.py  itemshop.py  leave_server.py  leave_vehicle_world.py  packet_handler.py  ping.py  request_server_time.py  room_handlers.py  scoreboard.py  select_channel.py  server.py  userlist.py
wcps_game/networking/: __init__.py  auth_server.py  handlers.py  listeners.py  packets.py
wcps_game/packets/: chat.py  coupon.py  end_game.py  equipment.py  error_codes.py  explosives.py  game_clock.py  game_data_info.py  game_process.py  internal_gameserver_details.py  internal_gameserver_status.py  internal_player_auth.py  internals.py  itemshop.py  leave_server.py  manual_game_setup.py  manual_round_end.py  manual_round_start.py  ping.py  (+18 more)
(+40 files in other folders)
